fixed headshot spacing issue

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -135,7 +135,7 @@ h2 {
 .skillIcon {
     color: var(--color-2);
     margin: 5px;
-    font-size: 3rem;
+    font-size: 4rem;
 }
 .storyIcon {
     color: var(--color-3);
